cmake_minimum_required (VERSION 3.26.3)
project (cc3k)
add_executable (cc3k blockedCell.cc cell.cc stairway.cc chamberInterior.cc doorway.cc entity.cc entitySpawnable.cc floor.cc floorTile.cc game.cc main.cc npc.cc passage.cc pc.cc potionEffect.cc playerWalkableCell.cc voidCell.cc wall.cc item.cc treasure.cc potion.cc)
